# counter-robots

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  bump_version.py  pytest.ini  run-tests.sh  run-update.sh  setup.cfg  setup.py
.github/workflows/: keepalive.yml  sync-lists.yml  tests.yml
counter_robots/: __init__.py  config.py  version.py
counter_robots/data/: machine.txt  robot.txt
docs/: Makefile  authors.rst  changes.rst  conf.py  contributing.rst  developer.rst  index.rst  installation.rst  make.bat  usage.rst
scripts/: update-lists.py
tests/: test_robots.py
