# -*- coding: utf-8 -*-
#
# This file is part of COUNTER-Robots.
# Copyright (C) 2025 CERN.
# Copyright (C) 2025 Graz University of Technology.
#
# COUNTER-Robots is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = counter-robots
version = attr: counter_robots.__version__
description = Library for COUNTER-compliant detection of machines and robots.
long_description = file: README.rst, CHANGES.rst
keywords = COUNTER, user-agent, robot detection
license = MIT
author = Invenio Software
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/counter-robots
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =

[options.extras_require]
tests =
    pytest-black>=0.6.0
    pytest-invenio>=3.0.0,<4.0.0
    Sphinx>=4.5.0
# Kept for backwards compatibility
docs =

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=counter_robots --cov-report=term-missing
testpaths = docs tests counter_robots
